--- a/Documentation/4x02.md
+++ b/Documentation/4x02.md
@@ -1,9 +1,13 @@
-## 📘 4.2 — REST, gRPC и JSON\:API
+# 🧱 Блок 4.2 — REST, gRPC и JSON\:API
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.2 — REST, gRPC и JSON\:API
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.2 — REST, gRPC и JSON\:API
+
+---
 
 ## 🎯 Назначение
 
