--- a/Documentation/9x02.md
+++ b/Documentation/9x02.md
@@ -1,9 +1,13 @@
-# 9.2 — Внешние модули (динамическая загрузка: dlopen / LoadLibrary)
+# 🧱 Блок 9.2 — Внешние модули (динамическая загрузка: dlopen / LoadLibrary)
 
-## 🏢 Идентификатор блока
+---
 
-* Пакет 9 — Расширяемость
-* Блок 9.2 — Внешние модули (dlopen / LoadLibrary)
+## 🆔 Идентификатор блока
+
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.2 — Внешние модули (динамическая загрузка: dlopen / LoadLibrary)
+
+---
 
 ## ✨ Назначение
 
