--- a/Documentation/9x01.md
+++ b/Documentation/9x01.md
@@ -1,9 +1,13 @@
-# 9.1 — Расширения и пользовательские функции (UDF / UDAF)
+# 🧱 Блок 9.1 — Расширения и пользовательские функции (UDF / UDAF)
 
-## 🏢 Идентификатор блока
+---
 
-* Пакет 9 — Расширяемость
-* Блок 9.1 — Расширения и пользовательские функции (UDF / UDAF)
+## 🆔 Идентификатор блока
+
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.1 — Расширения и пользовательские функции (UDF / UDAF)
+
+---
 
 ## 🎯 Назначение
 
