--- a/Documentation/9x03.md
+++ b/Documentation/9x03.md
@@ -1,9 +1,13 @@
-# 9.3 — SQL-протокол (Binary Protocol, PostgreSQL Wire)
+# 🧱 Блок 9.3 — SQL-протокол (Binary Protocol, PostgreSQL Wire)
 
-## 🏢 Идентификатор блока
+---
 
-* Пакет 9 — Расширяемость
-* Блок 9.3 — SQL-протокол (Binary Protocol, PostgreSQL Wire)
+## 🆔 Идентификатор блока
+
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.3 — SQL-протокол (Binary Protocol, PostgreSQL Wire)
+
+---
 
 ## ✨ Назначение
 
