--- a/Documentation/9x04.md
+++ b/Documentation/9x04.md
@@ -2,14 +2,14 @@
 
 ---
 
-## 🏢 Идентификатор блока
+## 🆔 Идентификатор блока
 
 * **Пакет:** 9 — Расширяемость
-* **Блок:** 9.4 — REST, gRPC и JSON\:API
+* **Блок:** 9.4 — Внешние интерфейсы: REST, gRPC и JSON\:API
 
 ---
 
-## 🎯 Назначение
+## ✨ Назначение
 
 Данный блок реализует внешний API-доступ к In-Memory РСУБД через три современных протокола:
 
