--- a/Documentation/9x04.md
+++ b/Documentation/9x04.md
@@ -9,7 +9,7 @@
 
 ---
 
-## ✨ Назначение
+## 🎯 Назначение
 
 Данный блок реализует внешний API-доступ к In-Memory РСУБД через три современных протокола:
 
