--- a/Documentation/9x03.md
+++ b/Documentation/9x03.md
@@ -9,7 +9,7 @@
 
 ---
 
-## ✨ Назначение
+## 🎯 Назначение
 
 SQL-протокол определяет низкоуровневой сетевой интерфейс для SQL-запросов между клиентом и базой данных. Он поддерживает собственный бинарный протокол, а также PostgreSQL Wire Protocol для совместимости с клиентами PostgreSQL.
 
