--- a/Documentation/9x02.md
+++ b/Documentation/9x02.md
@@ -9,7 +9,7 @@
 
 ---
 
-## ✨ Назначение
+## 🎯 Назначение
 
 Обеспечивает динамическую загрузку внешних библиотек (напр., модули на C/C++, сторонние расширения) в реальном времени без пересборки ядра СУБД.
 
