--- a/Documentation/9x05.md
+++ b/Documentation/9x05.md
@@ -1,9 +1,13 @@
-# 9.5 — DSL/UDF для ERP и ETL-сценариев
+# 🧱 Блок 9.5 — DSL/UDF для ERP и ETL-сценариев
 
-## 🏢 Идентификатор блока
+---
 
-* Пакет 9 — Расширяемость
-* Блок 9.5 — DSL/UDF для ERP и ETL-сценариев
+## 🆔 Идентификатор блока
+
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.5 — DSL/UDF для ERP и ETL-сценариев
+
+---
 
 ## 🎯 Назначение
 
