--- a/Documentation/9x06.md
+++ b/Documentation/9x06.md
@@ -1,9 +1,13 @@
-# 9.6 — Расширения через внешние модули (dlopen / LoadLibrary)
+# 🧱 Блок 9.6 — Расширения через внешние модули (dlopen / LoadLibrary)
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 9 — Расширяемость
-* Блок 9.6 — Расширения через внешние модули (dlopen / LoadLibrary)
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.6 — Расширения через внешние модули (dlopen / LoadLibrary)
+
+---
 
 ## 🎯 Назначение
 
