--- a/Documentation/9x07.md
+++ b/Documentation/9x07.md
@@ -1,9 +1,13 @@
-# 9.7 — SQL-протокол и совместимость с PostgreSQL wire protocol
+# 🧱 Блок 9.7 — SQL-протокол и совместимость с PostgreSQL wire protocol
 
-## 🏢 Идентификатор блока
+---
 
-* Пакет 9 — Расширяемость
-* Блок 9.7 — SQL-протокол и совместимость с PostgreSQL wire protocol
+## 🆔 Идентификатор блока
+
+* **Пакет:** 9 — Расширяемость
+* **Блок:** 9.7 — SQL-протокол и совместимость с PostgreSQL wire protocol
+
+---
 
 ## 🎯 Назначение
 
